@@ -4,3 +4,4 @@
 
 mkdir -p m4
 autoreconf --force --install -I config -I m4
+rm -f COPYING
