@@ -1,3 +1,11 @@
+2014-11-18	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* autogen.sh: removing COPYING
+
+	* src/countcolorpages.sh: script which counts all colored pages in pdf files
+
+	* src/screenshot.sh: exporting to png files
+
 2014-11-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/latexrefre.sh: correctly handling bibtex updates
